@@ -1,11 +1,12 @@
 # Copyright 1999-2001 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License, v2 or later
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/gradm-1.2.1.ebuild,v 1.5 2002/07/21 19:54:28 gerk Exp $
 
 DESCRIPTION="Administratinve interface to grsecurity"
 SRC_URI="http://www.grsecurity.net/gradm-1.2.1.tar.gz
 	http://pageexec.virtualave.net/chpax.c"
 HOMEPAGE="http://www.grsecurity.net"
-KEYWORDS="x86"
+KEYWORDS="x86 ppc"
 SLOT="0"
 #DEPEND=""
 LICENSE="GPL-2"
