@@ -1,8 +1,11 @@
 # ChangeLog for sys-apps/ipchains
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/ipchains/ChangeLog,v 1.2 2002/07/14 19:20:18 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/ipchains/ChangeLog,v 1.3 2002/07/21 19:58:55 gerk Exp $
 
 *ipchains-1.3.10-r1 (1 Feb 2002)
+
+  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
+  updated keywords (ppc)
 
   14 Jul 2002; phoen][x <phoenix@gentoo.org> ipchains-1.3.10-r1.ebuild :
   Added KEYWORDS, SLOT.
