@@ -1,8 +1,11 @@
 # ChangeLog for media-gfx/scrot
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.2 2002/07/14 19:20:17 aliz Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.3 2002/07/21 19:54:28 gerk Exp $
 
 *gradm-1.2.1 (1 May 2002)
+
+  21 Jul 2002; Mark Guertin <gerk@gentoo.org>:
+  updated keywords (ppc)
 
   14 Jul 2002; phoen][x <phoenix@gentoo.org> gradm-1.2.1.ebuild :
   Added KEYWORDS, SLOT.
